--- a/react-101/lession-10-building-your-own-custom-hooks/src/style.css
+++ b/react-101/lession-10-building-your-own-custom-hooks/src/style.css
@@ -9,8 +9,10 @@ body {
   color: white;
 }
 
-.flex {
-  display: flex;
+h2 {
+  margin: 0;
+  font-weight: 500;
+  font-size: 1.1rem;
 }
 
 .container {
@@ -19,148 +21,166 @@ body {
   color: white;
 }
 
-.container-md {
-  max-width: 300px;
-  margin: 100px auto;
-  color: white;
-}
-
-.avatar {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
-
-.review-userinfo {
-  display: flex;
-  gap: 1rem;
-  position: relative;
-}
-
-.review-reaction {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  display: flex;
-  align-items: center;
-}
-
-.review-reaction img {
-  width: 17px;
-  padding: 0 5px;
-  cursor: pointer;
-}
-
-.review-reaction span {
-  font-size: 10px;
-  background-color: #efefef;
-  padding: 0 7px;
-  border-radius: 10px;
-}
-
-.review-username {
-  font-size: 14px;
-  margin: 0.25rem 0 0.5rem 0;
-}
-
-.review-point {
-  display: flex;
-  gap: 5px;
-}
-
-.review-point img {
-  width: 12px;
-}
-
-.review p {
-  font-style: italic;
-  color: #666;
-  line-height: 1.5;
-  margin-bottom: 0;
-}
-
-.review {
-  padding: 2rem 0;
-  border-bottom: 1px solid #e5e7eb;
-}
-
-.review .carousel {
-  display: flex;
-  gap: 0.5rem;
-  padding-top: 0.5rem;
-}
-
-.review .carousel img {
-  width: 100px;
-  border-radius: 5px;
-}
-
-.user {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 300px;
-  padding: 0.5rem 1rem;
-  background: #fff;
-  margin-bottom: 0.5rem;
-  border: 1px solid #e5e7eb;
-  border-radius: 0.25rem;
-  font-size: 0.825rem;
+.message {
+  text-align: center;
+  font-size: 1.5rem;
 }
 
 .btn {
-  border: none;
-  background: #f3f3f3;
-  color: rgb(34, 34, 34);
+  background-color: #ffffff;
+  border: 1px solid rgb(209, 213, 219);
+  border-radius: 0.5rem;
+  box-sizing: border-box;
+  color: #111827;
+  font-family: "Inter var", ui-sans-serif, system-ui, -apple-system, system-ui,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 0.875rem;
+  font-weight: 600;
+  line-height: 1.25rem;
+  padding: 0.5rem 0.75rem;
+  text-align: center;
+  text-decoration: none #d1d5db solid;
+  text-decoration-thickness: auto;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   cursor: pointer;
-  padding: 0.25rem 0.5rem;
-  border-radius: 0.25rem;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
 .btn:hover {
-  color: rgb(78, 78, 78);
-  background: #dadada;
+  background-color: rgb(249, 250, 251);
 }
 
-.btn-delete {
-  border: none;
-  background: none;
-  color: rgb(233, 103, 103);
-  cursor: pointer;
-  padding: 0.25rem 0.5rem;
-  border-radius: 0.25rem;
+.btn:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
-.btn-delete:hover {
-  color: rgb(211, 38, 38);
-  background: #f3f3f3;
+.btn:focus-visible {
+  box-shadow: none;
 }
 
-.todo {
+.btn.danger {
+  background-color: #e75454;
+  border: 1px solid #e75454;
+  color: white;
+}
+
+.btn.danger:hover {
+  background-color: #f16363;
+}
+
+/* DeactivateAccountModal ------------------------------- */
+
+.warning-icon {
+  width: 30px;
+  height: 30px;
+  color: red;
+}
+
+.modal {
+  background-color: #fff;
+  border-radius: 0.5rem;
+  max-width: 400px;
+  margin: auto;
+  padding: 1rem;
+  padding-top: 1.5rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  color: #000;
+  opacity: 1;
+  transition: all 0.5s ease-in-out;
+}
+
+.modal.hide {
+  opacity: 0;
+}
+
+.modal-content {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
   gap: 1rem;
-  padding: 0.5rem 0.75rem;
-  border: 1px solid #dadada;
-  border-radius: 0.5rem;
-  margin-top: 0.75rem;
-  max-width: 350px;
+  color: rgb(107 114 128);
 }
 
-.todo-action {
+.modal-content h2 {
+  color: rgb(18, 18, 18);
+}
+
+.modal-content p {
+  line-height: 1.5;
+  font-size: 0.825rem;
+}
+
+.modal-content .warning-icon {
+  background-color: rgba(255, 226, 226, 0.6);
+  color: rgba(255, 93, 93, 1);
+  border-radius: 50%;
+  /* flex-basis: 150px; */
+  flex-shrink: 0;
+  padding: 9px;
+
+  /* padding: 0.8rem; */
+  width: 20px;
+  height: 20px;
+}
+
+.modal-actions {
   display: flex;
+  flex-direction: row-reverse;
   align-items: center;
-  gap: 0.5rem;
+  gap: 1rem;
 }
 
-.todo.complete {
-  text-decoration: line-through;
-}
+/* SearchUsername ------------------------------- */
 
-.box {
-  padding: 0.5rem 0.75rem;
-  border: 1px solid #dadada;
+.search-container {
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  color: rgb(107 114 128);
   border-radius: 0.5rem;
+  padding: 0.5rem 0;
 }
 
+.search-input {
+  display: flex;
+  gap: 0.5rem;
+  padding: 0 0.75rem;
+}
+
+.search-icon {
+  width: 20px;
+  height: 20px;
+  color: rgb(107 114 128);
+}
+
+.search-input input {
+  width: 100%;
+  border: none;
+  color: rgb(107 114 128);
+}
+
+.search-input input:focus {
+  /* width: 100%; */
+  border: none;
+  outline: none;
+}
+
+.search-results {
+  margin-top: 0.5rem;
+  padding-top: 0.5rem;
+  border-top: 1px solid #ededed;
+  max-height: 300px;
+  overflow: auto;
+}
+
+.search-results .item {
+  font-size: 0.625rem;
+  padding: 0.5rem 0.725rem;
+}
+
+.search-results .item:hover {
+  color: white;
+  cursor: pointer;
+  background-color: rgb(81, 81, 228);
+}
