refactor: update source code of lession 12th

--- a/react-101/lession-12-react-router-dom/src/index.css
+++ b/react-101/lession-12-react-router-dom/src/index.css
@@ -6,3 +6,22 @@ body {
 a {
   color: white;
 }
+
+.invoices {
+  display: flex;
+}
+
+.invoices nav {
+  border-right: 1px solid;
+  padding: 1rem;
+}
+
+nav .invoice-item {
+  display: block;
+  margin: 1rem 0;
+}
+
+.invoice-detail {
+  padding: 1rem;
+
+}
